<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".app.MainActivity">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"/>
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
        >
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_margin="5dp"
                android:id="@+id/button_house_gryffindor"
                android:text="@string/gryffindor"
            />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_margin="5dp"
                android:id="@+id/button_house_hufflepuff"
                android:text="@string/hufflepuff"
                />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_margin="5dp"
                android:id="@+id/button_house_slytherin"
                android:text="@string/slytherin"
                />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_margin="5dp"
                android:id="@+id/button_house_ravenclaw"
                android:text="@string/ravenclaw"
                />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_margin="5dp"
                android:id="@+id/button_house_professors"
                android:text="@string/professors"
                />
        <Button
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_margin="5dp"
                android:id="@+id/button_house_nonwizards"
                android:text="@string/non_wizards"
                />
    </GridLayout>
</LinearLayout>